fixed vertical margin for spotlight sections on mobile

--- a/assets/css/myStyles.css
+++ b/assets/css/myStyles.css
@@ -40,3 +40,7 @@
 .footer-cta-header h2 {
     margin-bottom: 30px;
 }
+
+.spotlight-group {
+    margin-bottom: 30px;
+}
